--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
     "@angular/platform-browser": "^19.2.0",
     "@angular/platform-browser-dynamic": "^19.2.0",
     "@angular/router": "^19.2.0",
+    "@ng-bootstrap/ng-bootstrap": "^18.0.0",
     "@ngrx/effects": "^19.2.1",
     "@ngrx/entity": "^19.2.1",
     "@ngrx/store": "^19.2.1",
     "@ngrx/store-devtools": "^19.2.1",
+    "@popperjs/core": "^2.11.8",
     "bootstrap": "^5.3.8",
     "bootstrap-icons": "^1.13.1",
     "rxjs": "~7.8.0",
@@ -31,6 +33,7 @@
     "@angular-devkit/build-angular": "^19.2.16",
     "@angular/cli": "^19.2.16",
     "@angular/compiler-cli": "^19.2.0",
+    "@angular/localize": "^19.2.0",
     "@types/jasmine": "~5.1.0",
     "jasmine-core": "~5.6.0",
     "karma": "~6.4.0",
